# koda

./: .gitignore  LICENSE  README.md
.docker/: Dockerfile  docker-compose.yml
api/: main.py  pyproject.toml
api/config/: database.py  env.py
api/controller/: ingest_controller.py
api/models/: document.py
api/repository/: document_repository.py
api/routes/v1/: __init__.py
api/services/: ingest_service.py
