[project]
name = "api"
package-mode = false
version = "0.1.0"
description = ""
authors = [
    {name = "Francis",email = "hello@francistries.science"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-google-genai (>=4.1.2,<5.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "pgvector (>=0.4.2,<0.5.0)",
    "pypdf (>=6.6.0,<7.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
